--- a/OverviewVC.xib
+++ b/OverviewVC.xib
@@ -98,7 +98,6 @@
 								</object>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<bool key="IBUIHighlighted">YES</bool>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<object class="NSFont" key="IBUIFont" id="1006522991">
@@ -106,7 +105,6 @@
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
 								</object>
-								<int key="IBUIButtonType">1</int>
 								<object class="NSColor" key="IBUIHighlightedTitleColor" id="293767431">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -115,10 +113,6 @@
 								<object class="NSColor" key="IBUINormalTitleShadowColor" id="956507043">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
-								</object>
-								<object class="NSCustomResource" key="IBUINormalImage" id="355992136">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">UISc1mainButtons_nopic.png</string>
 								</object>
 							</object>
 							<object class="IBUIImageView" id="712711542">
@@ -166,15 +160,12 @@
 								<reference key="IBUIBackgroundColor" ref="207932332"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<bool key="IBUIHighlighted">YES</bool>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<reference key="IBUIFont" ref="1006522991"/>
-								<int key="IBUIButtonType">1</int>
 								<reference key="IBUIHighlightedTitleColor" ref="293767431"/>
 								<reference key="IBUINormalTitleColor" ref="207932332"/>
 								<reference key="IBUINormalTitleShadowColor" ref="956507043"/>
-								<reference key="IBUINormalImage" ref="355992136"/>
 							</object>
 							<object class="IBUIImageView" id="520766569">
 								<reference key="NSNextResponder" ref="1005808008"/>
@@ -191,7 +182,7 @@
 								<reference key="IBUIImage" ref="906980462"/>
 							</object>
 						</object>
-						<string key="NSFrameSize">{213, 274}</string>
+						<string key="NSFrame">{{250, 0}, {213, 274}}</string>
 						<reference key="NSSuperview" ref="564131682"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="482892460"/>
@@ -223,7 +214,10 @@
 								<reference key="IBUIHighlightedTitleColor" ref="293767431"/>
 								<reference key="IBUINormalTitleColor" ref="207932332"/>
 								<reference key="IBUINormalTitleShadowColor" ref="956507043"/>
-								<reference key="IBUINormalImage" ref="355992136"/>
+								<object class="NSCustomResource" key="IBUINormalImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">UISc1mainButtons_nopic.png</string>
+								</object>
 							</object>
 							<object class="IBUIImageView" id="344323893">
 								<reference key="NSNextResponder" ref="452129709"/>
@@ -240,7 +234,7 @@
 								<reference key="IBUIImage" ref="906980462"/>
 							</object>
 						</object>
-						<string key="NSFrameSize">{213, 274}</string>
+						<string key="NSFrame">{{500, 0}, {213, 274}}</string>
 						<reference key="NSSuperview" ref="564131682"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="440664291"/>
@@ -253,7 +247,7 @@
 				<string key="NSFrameSize">{960, 480}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
+				<reference key="NSNextKeyView" ref="565265466"/>
 				<bool key="IBUIAutoresizesSubviews">NO</bool>
 				<bool key="IBUIMultipleTouchEnabled">YES</bool>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -285,6 +279,15 @@
 						<reference key="destination" ref="1067385676"/>
 					</object>
 					<int key="connectionID">66</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">switchToRecentEpisodeView</string>
+						<reference key="source" ref="1054924430"/>
+						<reference key="destination" ref="841351856"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">68</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -360,8 +363,8 @@
 						<reference key="object" ref="1005808008"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="520766569"/>
 							<reference ref="482892460"/>
+							<reference ref="520766569"/>
 						</object>
 						<reference key="parent" ref="564131682"/>
 						<string key="objectName">Blogs View</string>
@@ -375,6 +378,7 @@
 						<int key="objectID">46</int>
 						<reference key="object" ref="482892460"/>
 						<reference key="parent" ref="1005808008"/>
+						<string key="objectName">View Blogs Button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">50</int>
@@ -390,11 +394,13 @@
 						<int key="objectID">17</int>
 						<reference key="object" ref="1054924430"/>
 						<reference key="parent" ref="539967786"/>
+						<string key="objectName">View Recent Episodes Button</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">51</int>
 						<reference key="object" ref="440664291"/>
 						<reference key="parent" ref="452129709"/>
+						<string key="objectName">View Social Links Button</string>
 					</object>
 				</object>
 			</object>
@@ -418,6 +424,7 @@
 					<string>45.IBPluginDependency</string>
 					<string>45.IBViewBoundsToFrameTransform</string>
 					<string>46.IBPluginDependency</string>
+					<string>46.IBUIButtonInspectorSelectedStateConfigurationMetadataKey</string>
 					<string>46.IBViewBoundsToFrameTransform</string>
 					<string>47.IBPluginDependency</string>
 					<string>47.IBViewBoundsToFrameTransform</string>
@@ -457,6 +464,7 @@
 						<bytes key="NSTransformStruct">P4AAAL+AAABDtwAAw92AAA</bytes>
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<real value="0.0"/>
 					<object class="NSAffineTransform"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSAffineTransform">
@@ -487,7 +495,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">67</int>
+			<int key="maxID">68</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
