--- a/OverviewVC.xib
+++ b/OverviewVC.xib
@@ -3,12 +3,12 @@
 	<data>
 		<int key="IBDocument.SystemTarget">1056</int>
 		<string key="IBDocument.SystemVersion">10J869</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1305</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1306</string>
 		<string key="IBDocument.AppKitVersion">1038.35</string>
 		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">300</string>
+			<string key="NS.object.0">301</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -42,7 +42,7 @@
 			<object class="IBUIView" id="1067385676">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
-				<string key="NSFrameSize">{320, 460}</string>
+				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView"/>
@@ -82,7 +82,7 @@
 					</object>
 					<object class="IBUIView" id="539967786">
 						<reference key="NSNextResponder" ref="564131682"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">319</int>
 						<object class="NSMutableArray" key="NSSubviews">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<object class="IBUIButton" id="1054924430">
@@ -97,6 +97,7 @@
 									<bytes key="NSRGB">MSAxIDEAA</bytes>
 								</object>
 								<bool key="IBUIOpaque">NO</bool>
+								<int key="IBUIContentMode">2</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
@@ -122,9 +123,11 @@
 								<reference key="NSSuperview" ref="539967786"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1005808008"/>
+								<int key="IBUIContentMode">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
 									<string key="IBUIAccessibilityLabel">LatestEpisodeImage</string>
+									<integer value="4" key="IBUIAccessibilityTraits"/>
 								</object>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage" id="906980462">
@@ -133,7 +136,7 @@
 								</object>
 							</object>
 						</object>
-						<string key="NSFrameSize">{213, 274}</string>
+						<string key="NSFrame">{{63, 170}, {213, 274}}</string>
 						<reference key="NSSuperview" ref="564131682"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1054924430"/>
@@ -143,6 +146,7 @@
 						</object>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIAutoresizesSubviews">NO</bool>
+						<int key="IBUIContentMode">1</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUIView" id="1005808008">
@@ -174,6 +178,7 @@
 								<reference key="NSSuperview" ref="1005808008"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="452129709"/>
+								<int key="IBUIContentMode">2</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
 									<string key="IBUIAccessibilityLabel">LatestEpisodeImage</string>
@@ -182,7 +187,7 @@
 								<reference key="IBUIImage" ref="906980462"/>
 							</object>
 						</object>
-						<string key="NSFrame">{{250, 0}, {213, 274}}</string>
+						<string key="NSFrame">{{367, 170}, {213, 274}}</string>
 						<reference key="NSSuperview" ref="564131682"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="482892460"/>
@@ -234,7 +239,7 @@
 								<reference key="IBUIImage" ref="906980462"/>
 							</object>
 						</object>
-						<string key="NSFrame">{{500, 0}, {213, 274}}</string>
+						<string key="NSFrame">{{687, 170}, {213, 274}}</string>
 						<reference key="NSSuperview" ref="564131682"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="440664291"/>
@@ -289,6 +294,30 @@
 					</object>
 					<int key="connectionID">68</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">recentEpisodeMiniView</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="539967786"/>
+					</object>
+					<int key="connectionID">69</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">blogMiniView</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="1005808008"/>
+					</object>
+					<int key="connectionID">70</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">socialMiniView</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="452129709"/>
+					</object>
+					<int key="connectionID">71</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -323,8 +352,8 @@
 						<reference key="object" ref="564131682"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="539967786"/>
 							<reference ref="565265466"/>
+							<reference ref="539967786"/>
 							<reference ref="452129709"/>
 							<reference ref="1005808008"/>
 						</object>
@@ -340,7 +369,7 @@
 							<reference ref="1054924430"/>
 						</object>
 						<reference key="parent" ref="564131682"/>
-						<string key="objectName">Episodes View</string>
+						<string key="objectName">Recent Episode MiniView</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
@@ -356,7 +385,7 @@
 							<reference ref="344323893"/>
 						</object>
 						<reference key="parent" ref="564131682"/>
-						<string key="objectName">Social View</string>
+						<string key="objectName">Social MiniView</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">45</int>
@@ -367,7 +396,7 @@
 							<reference ref="520766569"/>
 						</object>
 						<reference key="parent" ref="564131682"/>
-						<string key="objectName">Blogs View</string>
+						<string key="objectName">Blog MiniView</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">47</int>
@@ -389,6 +418,7 @@
 						<int key="objectID">14</int>
 						<reference key="object" ref="712711542"/>
 						<reference key="parent" ref="539967786"/>
+						<string key="objectName">Image View - latest_ep_icon.png</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
@@ -495,7 +525,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">68</int>
+			<int key="maxID">71</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -515,14 +545,49 @@
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">bgScrollView</string>
-						<string key="NS.object.0">UIScrollView</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>bgScrollView</string>
+							<string>blogMiniView</string>
+							<string>recentEpisodeMiniView</string>
+							<string>socialMiniView</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIScrollView</string>
+							<string>UIView</string>
+							<string>UIView</string>
+							<string>UIView</string>
+						</object>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">bgScrollView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">bgScrollView</string>
-							<string key="candidateClassName">UIScrollView</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>bgScrollView</string>
+							<string>blogMiniView</string>
+							<string>recentEpisodeMiniView</string>
+							<string>socialMiniView</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">bgScrollView</string>
+								<string key="candidateClassName">UIScrollView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">blogMiniView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">recentEpisodeMiniView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">socialMiniView</string>
+								<string key="candidateClassName">UIView</string>
+							</object>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -559,6 +624,6 @@
 				<string>{133, 75}</string>
 			</object>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">300</string>
+		<string key="IBCocoaTouchPluginVersion">301</string>
 	</data>
 </archive>
